# remap

./: .gitignore  README.md  comp  graph_builder.py  join_identification.py  main.py  note  pyproject.toml  remap.py  requirements.txt  test_case_overview.txt  validation_report.md  validator.py  vocabulary.py
llm_test_cases/RMLTC0001a-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0001b-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0002a-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0002b-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0003c-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0004a-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0005a-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0006a-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0007a-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0007b-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0007c-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0007d-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0007e-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0007f-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0007g-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0008a-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0008b-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0008c-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0009a-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0009b-CSV/: gen_mapping.ttl  prompt.txt
llm_test_cases/RMLTC0010a-CSV/: gen_mapping.ttl  (+1 more)
(+40 files in other folders)
